--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -5,7 +5,8 @@
 }
 
 <script>
-	$(function () {
+    $(function () {
+        debugger;
 		SmartStore.Admin.movePluginActionButtons();
 	});
 </script>
