--- a/src/Presentation/SmartStore.Web/Views/Home/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         {
             <div class="carousel">
                 <div class="slide">
-                   <img src="/admin/store/BannerPicture?url=@item.URL" width="1100" height="600" />
+                   <img src="/home/BannerPicture?url=@item.URL" width="1100" height="600" />
                 </div>
             </div>
         }
